--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "revolution/laravel-google-sheets": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
