--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Epoch
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:L9KWvSDNiBYvzNcvNAIjCl0BvmX8hdZWthJsHlwLYpo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=Laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -57,3 +57,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#Faker
+FAKER_LOCALE=id_ID
+
+# Google
+GOOGLE_CLIENT_ID=1038928804849-95d88sklee5f62sul7iei80b9amagro0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_SERVICE_ACCOUNT_JSON_LOCATION=web-if-535d8fc6e7af.json
+GOOGLE_SERVICE_ENABLED=true
+SHEET_ID=1kwhkJFY0ClQC_3bhGCFotA070ur97HxG5xWGx7nNgjg
+
+
